# koinos-types

./: .eslintrc.js  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  jest.config.js  package-lock.json  package.json  system_call_names.json  tsconfig-build.json  tsconfig.json
ci/: after_success.sh  build.sh  install.sh  test.sh  travis_osx_brew_cache.sh
cmake/: CodeCoverage.cmake  HunterGate.cmake  go.mod.in  pkg-config.pc.in
cmake/Hunter/: config.cmake
cmake/typescript/: package.json  tsconfig.json
doc/: SchemaLang.g4
lang/: CMakeLists.txt
lang/cpp/: CMakeLists.txt
lang/golang/: CMakeLists.txt
lang/typescript/: CMakeLists.txt
libraries/: CMakeLists.txt
libraries/pack/: CMakeLists.txt
libraries/pack/src/: block.bt  block.hpp  chain.hpp  submit.hpp  system_call_ids.hpp  system_calls.hpp  thunk_ids.hpp  thunks.hpp
programs/: CMakeLists.txt
programs/binary-gen/: CMakeLists.txt  main.cpp
programs/canonical-output/: CMakeLists.txt  check_canonical_output.py  main.cpp
programs/canonical-output/lang/: CMakeLists.txt
programs/canonical-output/lang/cpp/: CMakeLists.txt  driver.py  driver.sh
programs/canonical-output/lang/golang/: CMakeLists.txt  driver.py  driver.sh
programs/generate-ids/: build.sh  codegen_ids.py  codegen_thunk_ids.py
programs/generate-ids/json/: names.json
programs/generate-ids/templates/: system_call_ids.hpp.j2  thunk_ids.hpp.j2
programs/generate_ids/: generate_ids.py
programs/generate_ids/json/: ids.json  names.json
programs/generate_ids/templates/: system_call_ids.hpp.j2  thunk_ids.hpp.j2
programs/koinos-types/: build.sh  update_test_data_153.py
programs/koinos-types/json/: test_data.json
programs/koinos-types/koinos_codegen/: codegen.py  testgen.py
programs/koinos-types/koinos_reflect/: analyze.py  lexer.py  parser.py  schema.py
programs/koinos-types/lang/koinos_codegen_cpp/: gencpp.py
programs/koinos-types/lang/koinos_codegen_cpp/rt/: basetypes.hpp  binary.hpp  binary_fwd.hpp  exceptions.hpp  json.hpp  json_fwd.hpp  multihash_binary.hpp  multihash_json.hpp  opaque.hpp  pack_fwd.hpp  reflect.hpp  typename.hpp  varint.hpp
programs/koinos-types/lang/koinos_codegen_cpp/rt/util/: base16.hpp  base58.hpp  base58impl.hpp  base64.hpp  multibase.hpp  variant_helpers.hpp
programs/koinos-types/lang/koinos_codegen_cpp/templates/: classes.hpp.j2  macros.j2  system_call_ids.h.j2  system_call_ids.hpp.j2  thunk_ids.h.j2  thunk_ids.hpp.j2
programs/koinos-types/lang/koinos_codegen_cpp/test/: main.cpp.j2
programs/koinos-types/lang/koinos_codegen_golang/: __init__.py  gengolang.py
programs/koinos-types/lang/koinos_codegen_golang/rt/: basetypes.go  serialization.go
programs/koinos-types/lang/koinos_codegen_golang/templates/: koinos.go.j2  koinos_test.go.j2
programs/koinos-types/lang/koinos_codegen_golang/test/: test.go.j2
programs/koinos-types/lang/koinos_codegen_python/rt/: basetypes.py  json.py
programs/koinos-types/lang/koinos_codegen_typescript/: __init__.py  gentypescript.py
programs/koinos-types/lang/koinos_codegen_typescript/rt/: BigNum.ts  BlockHeightType.ts  Bool.ts  FixedBlob.ts  Int128.ts  Int16.ts  Int160.ts  Int256.ts  Int32.ts  Int64.ts  Int8.ts  KoinosBigInt.ts  KoinosBoolean.ts  KoinosNumber.ts  KoinosString.ts  Multihash.ts  MultihashVector.ts  Num.ts  Opaque.ts  Optional.ts  Str.ts  TimestampType.ts  UInt128.ts  UInt16.ts  UInt160.ts  UInt256.ts  UInt32.ts  UInt64.ts  UInt8.ts  Uint128.ts  Uint16.ts  Uint160.ts  Uint256.ts  Uint32.ts  Uint64.ts  Uint8.ts  VarInt.ts  VariableBlob.ts  Variant.ts  Vector.ts  (+3 more)
programs/koinos-types/lang/koinos_codegen_typescript/templates/: koinos-basic-tests.ts.j2  koinos-enum.ts.j2  koinos-index.ts.j2  koinos-parser.ts.j2  koinos-struct.ts.j2  koinos-test.ts.j2  koinos-typedef.ts.j2  koinos-variant.ts.j2  koinos.ts.j2  koinos_test.ts.j2
programs/koinos-types/lang/koinos_codegen_typescript/test/: koinos-test.ts.j2
programs/test_multibase/: CMakeLists.txt  main.cpp  multibase_mc.py
programs/test_multibase/include/koinos/pack/: rt
tests/: CMakeLists.txt
tests/cpp/: BoostTestTargets.cmake  CMakeLists.txt
tests/cpp/include/koinos/tests/: pack_fixture.hpp
tests/cpp/src/: binary_pack_test.cpp  json_pack_test.cpp  multibase_generate_cases.py  multibase_test.cpp  opaque_test.cpp
tests/go/: koinos_test.go
tests/golang/: basetypes_test.go  binary_test.go  json_test.go
tests/include/koinos/tests/: pack_fixture.hpp
tests/test_fixtures/: pack_fixture.hpp
tests/tests/: binary_pack_test.cpp  json_pack_test.cpp  main.cpp  opaque_test.cpp
types/: basetypes.def  block.hpp  block_store.hpp  block_store_rpc.hpp  broadcast.hpp  chain.hpp  chain_rpc.hpp  common.hpp  koinosd_rpc.hpp  mempool_rpc.hpp  protocol.hpp  submit.hpp  system_call_ids.hpp  system_call_names.json  system_calls.hpp  thunk_ids.hpp  thunks.hpp  transaction_store.hpp  transaction_store_rpc.hpp  types.hpp
